<resources>
    <string name="app_name">SAM</string>

    <!-- Home -->
    <string name="title_home">Twitter Timeline</string>
    <string name="toast_login_successful">Authentication success</string>
    <string name="toast_login_failure">Authentication failed</string>

    <string name="welcome_message">Please login via Twitter to use the app</string>

    <!-- Map -->
    <string name="title_map">Users Locations</string>
    <string name="missing_grants">Localization grants missing</string>
    <string name="really_missing_grants">Can\'t use this section without location grants</string>

    <!-- SAMTweet Composer -->
    <string name="post_a_tweet">Post a tweet</string>
    <string name="tweet_body_hint">What\'s going through your mind?</string>
    <string name="post_tweet">Tweet</string>
    <string name="cancel_tweet">Cancel</string>
    <string name="generic_test_string">#test</string>
    <string name="cancel_btn_dialog_title">Are you sure?</string>
    <string name="cancel_btn_dialog_message">Do you want to delete the message?</string>
    <string name="tweet_btn_dialog_title">Share your thought</string>
    <string name="image_picker_btn_text">Attach Item</string>
    <string name="delete_attach_btn_text">Clear</string>
    <string name="image_description">pic to tweet</string>
    <string name="home_header_text">Twitter Timeline</string>

    <!-- Saved Tweets -->
    <string name="title_saved_posts">Saved Tweets</string>
    <string name="saved_posts_search_string">Search tweets</string>
    <string name="saved_posts_search_btn">Search</string>
    <string name="profile_image_description">profile image</string>
    <string name="doodle_btn_text">Draw</string>
    <string name="save_doodle">Save</string>


</resources>
