<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="xyz.marcobasile.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_map"
        android:name="xyz.marcobasile.ui.map.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_tweet_composer"
        android:name="xyz.marcobasile.ui.composer.TweetComposerFragment"
        android:label="@string/post_a_tweet"
        tools:layout="@layout/tweet_composer" />

    <fragment
        android:id="@+id/navigation_saved_posts"
        android:name="xyz.marcobasile.ui.savedposts.SavedPostsFragment"
        android:label="@string/title_saved_posts"
        tools:layout="@layout/fragment_saved_posts" />
</navigation>