<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#FABE6B">

    <TextView
        android:id="@+id/header"
        android:layout_width="315dp"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="50dp"
        android:alpha="1"
        android:background="#FBE1BB"
        android:gravity="center|center_horizontal|center_vertical"
        android:padding="@dimen/activity_horizontal_margin"
        android:shadowRadius="50"
        android:text="@string/post_a_tweet"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/textColor"
        android:visibility="invisible" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tweet_body_layout"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:hint="@string/tweet_body_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tweet_body"
            android:layout_width="326dp"
            android:layout_height="140dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="42dp"
            android:layout_marginTop="152dp"
            android:layout_marginEnd="42dp"
            android:background="#9EFFFFFF"
            android:gravity="center_horizontal"
            android:padding="24dp"
            android:visibility="visible" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/tweet_button"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="235dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="62dp"
        android:text="@string/post_tweet"
        app:icon="@drawable/ic_add_comment_24px" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancel_button"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="34dp"
        android:layout_marginEnd="235dp"
        android:layout_marginBottom="62dp"
        android:text="@string/cancel_tweet"
        app:backgroundTint="#BA03A9F4"
        app:icon="@drawable/ic_delete_24px" />

    <!--<com.google.android.material.chip.Chip
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="140dp"
        android:layout_marginStart="34dp"
        android:text="@string/app_name" />-->
    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_below="@+id/tweet_body_layout"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="34dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="34dp"
        android:background="#E2AC0E0E">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip"
            android:layout_width="80dp"
            android:layout_height="60dp" />

    </com.google.android.material.chip.ChipGroup>

</RelativeLayout>