<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/picture_sharing_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal|center_vertical"
    android:background="#FFEB3B"
    android:backgroundTint="#FFC107"
    android:gravity="center|center_horizontal"
    android:requiresFadingEdge="vertical">

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="match_parent"
        android:layout_height="520dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="0dp"
        android:contentDescription="@string/image_description"
        android:visibility="visible"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <Button
        android:id="@+id/ps_cancel_button"
        android:layout_width="140dp"
        android:layout_height="68dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="590dp"
        android:layout_marginBottom="84dp"
        android:backgroundTint="#03A9F4"
        android:text="@string/cancel_tweet"
        android:textColor="@color/tw__composer_white"
        android:textSize="22sp"
        android:visibility="visible" />

    <Button
        android:id="@+id/ps_tweet_button"
        android:layout_width="140dp"
        android:layout_height="68dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="590dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="84dp"
        android:backgroundTint="#D8135B"
        android:text="@string/post_tweet"
        android:textColor="@color/tw__composer_white"
        android:textSize="22sp"
        android:visibility="visible" />

    <View
        android:id="@+id/backdrop2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:background="#79FFFFFF"
        android:visibility="invisible" />

    <ProgressBar
        android:id="@+id/progress_bar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="120dp"
        android:foregroundGravity="center_vertical|center|center_horizontal"
        android:visibility="invisible" />

</RelativeLayout>